# zim-text-extractor

./: .gitignore  Makefile.am  configure.ac  default.nix  flake.nix
src/: main.cpp
